--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: deo_emerges
-description: An advanced Flutter networking package built on top of Dio, offering concurrent request handling, comprehensive error management, and extensive features for modern Flutter applications.
+description: Advanced Flutter networking package with concurrent requests, error handling, and state management integration.
 version: 0.1.0
 homepage: https://github.com/Tisankan/deo_emerges
 repository: https://github.com/Tisankan/deo_emerges
@@ -13,21 +13,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^5.3.2
-  logger: ^2.0.1
-  crypto: ^3.0.3
+  dio: ^5.8.0
+  logger: ^2.5.0
+  crypto: ^3.0.6
   retry: ^3.1.2
-  meta: ^1.9.1
-  riverpod: ^2.3.10
-  provider: ^6.0.5
-  flutter_bloc: ^8.1.3
+  meta: ^1.15.0
+  riverpod: ^2.6.1
+  provider: ^6.1.2
+  flutter_bloc: ^9.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.3
+  flutter_lints: ^5.0.0
   mockito: ^5.4.2
-  test: ^1.24.3
+  test: ^1.24.0
   build_runner: ^2.4.6
 
 flutter:
