--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: deo_emerges
-description: Advanced Flutter networking package with concurrent requests, error handling, and state management integration.
-version: 0.1.0
+description: Flutter networking package built on Dio with concurrent requests, error handling, and state management integration.
+version: 0.1.3
 homepage: https://github.com/Tisankan/deo_emerges
 repository: https://github.com/Tisankan/deo_emerges
 issue_tracker: https://github.com/Tisankan/deo_emerges/issues
